Style Refactor: correct spacing; refactor positioning in favor of resonsiveness

--- a/assets/style.css
+++ b/assets/style.css
@@ -15,7 +15,7 @@ header{
 }
 
 header div.header_wrapper{
-    padding: 10px 15px 0 15px;
+    padding: 10px 15px 0 35px;
 }
 
 #header_text{
@@ -37,14 +37,14 @@ div.row{
     border-left: 10px solid lightgrey;
     border-top: 10px solid lightgrey;
     border-radius: 5px;
-    height: 500px;
+    height: auto;
 }
 
 .search_box{
-    border-radius: 5px;
-    height: 525px;
     background: rgba(86, 45, 102, 0.808);
-    padding: 10px;
+    border-radius: 5px;
+    height: auto;
+    padding: 20px 30px 75px 30px;
     /* min-width: 308px; */
 }
 
@@ -113,50 +113,159 @@ div#current_city{
     border-left: 5px solid lightgrey;
     border-top: 10px solid lightgrey;
     border-radius: 5px;
-    height: 500px;
+    height: auto;
+    padding: 0 0 10px 5px;
 }
 
 div.forecast_wrapper{
-    border: 2px solid lightgrey;
+    border-color: lightgrey;
+    border-style: solid;
+    border-width: 4px 2px 10px 2px;
+    height:auto;
 }
 
 div#current_conditions{
     background: rgba(0, 90, 163, 0.65);
     border-radius: 5px;
-    height: 250px;
-    padding: 15px 15px;
+    height: auto;
+    padding: 15px 15px 20px 15px;
 }
 
-div.current_header{
+#city_header_wrap{
     display: flex;
+    justify-content: center;
 }
 
-p#today{
+#city_header_wrap h2{
+    font-size: 2em;
+    font-weight: 600;
+    height: auto;
+    margin: 0;
+    width: auto;
+}
 
+div#date_icon_wrap{
+    display: flex;
+    position: relative;
+    bottom: 25px;
+    padding-bottom: 10px;
+}
+
+#today{
+    font-size: 25px;
 }
 
 img#current_icon{
 
 }
 
+div#top_temp_wrap,
+div#top_hum_wrap{
+    display: flex;
+}
+
+div#top_degree{
+    position: relative;
+    left: 20px;
+    bottom: 1px;
+    font-size: 90%;
+}
+
+div#top_percent{
+    position: relative;
+    left: 20px;
+    top: 3px;
+    font-size: 90%;
+}
+
+div#bottom_cast_wrap{
+    height: auto;
+}
+
 div#week_forecast{
     background: whitesmoke;
     border-radius: 5px;
     display: flex;
-    height: 275px;
+    height: auto;
     flex-direction: column;
-    padding: 10px 10px;
+    padding: 20px 40px;
+}
+
+#forecast_title{
+    height:auto;
+    width:auto;
 }
 
 div.forecast_content_wrapper{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    width: auto;
+    height: auto;
 }
 
 div.day_forecast{
+    align-items: stretch;
     background: rgb(0, 90, 163);
+    border-color: rgb(0, 90, 163);
+    border-style: solid;
+    border-width: 2px 15px;
     border-radius: 5px;
-    width: 110px;
-    height: 180px;
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    justify-content: space-evenly;
+    margin-bottom: 20px;
+    padding: 10px 20px 15px 15px;
+    width: auto;
+}
+
+.fc_txt{
+    color: lightgrey;
+}
+
+.date{
+    font-size: 1.4em;
+    padding: 0 0 0 5px;
+}
+
+.spacing{
+    padding: 5px 2px;
+    display: flex;
+}
+
+span.temp_txt{
+    font-size: 1.1em;
+}
+
+span.hum_txt{
+    font-size: 1em;
+}
+
+div.degree{
+    position: relative;
+    left: 20px;
+    bottom: 1px;
+    font-size: 90%;
+}
+
+div.percent{
+    position: relative;
+    left: 20px;
+    top: 4px;
+    font-size: 90%;
+}
+
+.data_txt{
+    font-size: 1.3em;
+    font-weight: 300;
+    position: relative;
+    bottom: 4px;
+    left: 20px;
+}
+
+div.temp,
+div.degree{
+    position: relative;
+    right: 5px;
 }
